# crystfel

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  Dockerfile  Dockerfile_alma9  Dockerfile_centos7  Dockerfile_fedora  Dockerfile_fedora32  Dockerfile_fedora37  Dockerfile_ubuntu  INSTALL.md  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  announcement-0.10.0  announcement-0.10.1  announcement-0.10.2  announcement-0.6.1  announcement-0.6.2  announcement-0.6.3  announcement-0.7.0  announcement-0.8.0  announcement-0.9.0  announcement-0.9.1  autogen.sh  config.h.cmake.in  config.h.in  config.status  configure  configure.ac  crystfel.rb  libtool  meson.build  (+17 more)
CMake/: FindCBF.cmake  FindCairo.cmake  FindFDIP.cmake  FindFFTW.cmake  FindGDK.cmake  FindGdkPixbuf2.cmake  FindNBP.cmake  FindPINKINDEXER.cmake  FindXGANDALF.cmake  LICENSE_1_0.txt  config.cmake
contrib/: alter_stream.c  cubeit.c
data/: Makefile.am  Makefile.in  cell_explorer.desktop  crystfel.desktop  crystfel.gresource.xml  defs.h  diffraction.cl  displaywindow.ui  gen-resources  geomatic.ui  hdfsee.ui
deployment/: deploy-to-maxwell.sh
doc/: 0-INDEX  Makefile.am  Makefile.in  geometry  geometry.txt  gradients.lyx  hitrate.html  indexamajig  indexamajig.txt  matrix-notation.lyx  pattern_sim.txt  process_hkl  process_hkl.txt  quickstart.txt  stream-format.txt  symmetry  symmetry.txt  twin-calculator.odt
doc/articles/: electrons.rst  indexer-choice.rst  julia.rst  online.rst  pointgroup.rst  speed.rst  tutorial.rst
doc/examples/: Eiger16M-binning2-nativefiles.geom  Makefile.am  Makefile.in  cell-example.cell  cspad-cxiformat.geom  cspad-feb2011.geom  cspad-single.geom  jf-swissfel-16M.geom  lcls-cxi-9keV.beam  lcls-dec.beam  lcls-dec.geom  lcls-june-r0013-r0128.geom  lcls-june.beam  lcls-xpp-estimate.beam  lcls-xpp-estimate.geom  pilatus.geom  simple.geom
doc/man/: adjust_detector.1.md  align_detector.1.md  ambigator.1  cell_explorer.1  cell_tool.1  check_hkl.1  compare_hkl.1  crystfel.7  crystfel_geometry.1  crystfel_geometry.5  crystfel_geometry.5.md  geoptimiser.1  get_hkl.1  hdfsee.1  indexamajig.1  indexamajig.1.md  list_events.1  make_pixelmap.1  partial_sim.1  partialator.1  pattern_sim.1  powder_plot.1  process_hkl.1  render_hkl.1  show_residuals.1.md  whirligig.1
doc/reference/: CrystFEL-docs.sgml  CrystFEL-sections.txt  Makefile.am  Makefile.in
doc/reference/libcrystfel/: CrystFEL-docs.sgml  CrystFEL-sections.txt  Makefile.am  build-docs
doc/reference/libcrystfel/xml/: gtkdocentities.ent.cmake.in
doc/reference/xml/: coding-standards.xml
eclipse_formatting/: CrystFel_code_format.xml
examples/: lcls-dec.geom  lcls-june-r0013-r0128.geom  lcls-june.geom
julia/: alignment-test-moved.geom  alignment-test.geom  alignment-test.jl  partial_sim.jl  plot-geom.jl  (+2 more)
libcrystfel/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.cmake.in  config.h.in  crystfel.pc.in  libcrystfel-config.h.cmake.in  libcrystfel-config.h.meson.in  meson.build
libcrystfel/doc/: Doxyfile-version.in  Doxyfile.in  coding.md  index.md
libcrystfel/src/: asdf.c  asdf.h  beam-parameters.c  beam-parameters.h  cell-utils.c  cell-utils.h  cell.c  cell.h  cl-utils.c  cl-utils.h  colscale.c  colscale.h  crystal.c  crystal.h  crystfel-mille.c  crystfel-mille.h  datatemplate.c  datatemplate.h  datatemplate_priv.h  detector.c  detector.h  detgeom.c  detgeom.h  diffraction-gpu.c  diffraction.c  dirax.c  dirax.h  events.c  events.h  felix.c  felix.h  filters.c  filters.h  fom.c  fom.h  fromfile.c  fromfile.h  geometry.c  geometry.h  grainspotter.c  (+73 more)
libcrystfel/src/indexers/: asdf.c  asdf.h  dirax.c  dirax.h  felix.c  felix.h  ffbidx.c  ffbidx.h  fromfile.c  fromfile.h  mosflm.c  mosflm.h  pinkindexer.c  pinkindexer.h  smallcell.c  smallcell.h  taketwo.c  taketwo.h  xds.c  xds.h  xgandalf.c  xgandalf.h
libcrystfel/src/peakfinders/: RGFLib.c  RGFLib.h  RPFSource.c  RPFSource.h  robustpeakfinder.c  robustpeakfinder.h
scripts/: Makefile.am  Makefile.in  README  Rsplit_surface  Rsplit_surface.py  add-beam-params  alignment-test.jl  alternate-stream  ave-peak-resolution  ave-resolution  cell-please  check-hkl-completeness.gp  check-hkl-quality.gp  check-near-bragg  check-peak-detection  cif2hkl  clean-stream.py  compare-hkl.gp  create-mtz  create-xscale  crystal-frame-number  detector-shift  display-hdf5  double-hit  eV-to-A  eiger-badmap  euxfel-train-analysis  extract-geom  facetron-partiality.gp  facetron-patterns.gp  facetron.gp  fg-graph  find-filename  find-multiples  find-pairs  frequency  gaincal-to-saturation-map  gen-sfs  gen-sfs-ano  gen-sfs-expand  (+42 more)
src/: Makefile.am  Makefile.in  adjust_detector.c  align_detector.c  ambigator.c  beam-parameters.c  beam-parameters.h  calibrate-detector.c  calibrate_detector.c  cell.c  cell.h  cell_explorer.c  cell_tool.c  check_hkl.c  cl-utils.c  cl-utils.h  compare_hkl.c  crystfel_gui.c  crystfel_gui.h  crystfelcolourscale.c  crystfelcolourscale.h  crystfelfomgraph.c  crystfelfomgraph.h  crystfelimageview.c  crystfelimageview.h  crystfelindexingopts.c  crystfelindexingopts.h  crystfelmergeopts.c  crystfelmergeopts.h  crystfelsymmetryselector.c  crystfelsymmetryselector.h  cubeit.c  detector.c  detector.h  diffraction-gpu.c  diffraction-gpu.h  diffraction.c  diffraction.cl.h  diffraction.h  dirax.c  (+149 more)
subprojects/packagefiles/millepede/: meson.build  mille_c_wrap.cc  mille_c_wrap.h
tests/: .gitignore  CMakeLists.txt  ambi_check.c  cell_check.c  cellcompare_check.c  centering_check.c  create-headers.jl  ev_enum1.c  ev_enum1.geom  ev_enum1.h5  ev_enum2.c  ev_enum2.geom  ev_enum2.h5  ev_enum3.c  ev_enum3.geom  ev_enum3.h5  evparse1.c  evparse2.c  evparse3.c  evparse4.c  evparse5.c  evparse6.c  evparse7.c  file-wait  first_merge_check  first_merge_check.hkl  fourth_merge_check  fourth_merge_check.hkl  gen-ev-test.py  geom_roundtrip  gpu_sim_check.c  gpu_sim_check.geom  gradient_cell_asx.c  gradient_check.c  gradient_check_utils.c  gradient_check_utils.h  gradient_panel_move.c  gradient_panel_x.c  header_read.c  header_read.geom  (+55 more)
(+41 files in other folders)
